k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logistic-platform
  namespace: logistic-platform
spec:
  replicas: 2

  selector:
    matchLabels:
      app: logistic-platform

  template:
    metadata:
      labels:
        app: logistic-platform

    spec:
      containers:
        - name: logistic-platform
          image: ghcr.io/kaireidie/logistic-platform:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              memory: "768Mi"
              cpu: "1000m"

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
