k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: logistic-platform
spec:
  selector:
    app: logistic-platform
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
